the time planning is done

--- a/inc/assets/pgs/EmploiDuTemps.html
+++ b/inc/assets/pgs/EmploiDuTemps.html
@@ -19,42 +19,30 @@
                                              LUNDI
                                            </td>
                                         	 <td id="pt11">
-                                               <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/Informatique/Encadrant-3</small></button></p>
-                                               <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/Pratique/Encadrant-4</small></button></p>
+                                               <!-- <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/Informatique/Encadrant-3</small></button></p>
+                                               <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/Pratique/Encadrant-4</small></button></p> -->
                                             </td>
                                             <td id="pt12" >
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
+
                                             </td>
 
                                         	   <td id="pt13" >
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
+
                                             </td>
                                         	  <td id="pt14" >
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
+
                                             </td>
                                         </tr>
                                         <tr>
                                         	<td>MARDI</td>
                                         	<td id="pt21">
-                                            
+
                                           </td>
                                         	<td id="pt22">
 
                                           </td>
                                         	<td id="pt23">
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
+
                                             </td>
 
                                         	<td id="pt24">
@@ -67,24 +55,14 @@
                                         	<td id="pt32"></td>
                                         	<td id="pt33"></td>
                                         	<td id="pt34">
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
+
                                             </td>
                                         </tr>
                                         <tr>
                                         	<td>JEUDI</td>
                                         	<td id="pt41"></td>
                                         	<td id="pt42">
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
+
                                             </td>
                                         	<td id="pt43"></td>
                                         	<td id="pt44"></td>
@@ -94,40 +72,19 @@
                                         	<td id="pt51"></td>
                                         	<td id="pt52"></td>
                                         	<td id="pt53">
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
+
                                             </td>
                                         	<td id="pt54"></td>
                                         </tr>
                                         <tr>
                                         	<td>SAMEDI</td>
                                         	<td id="pt61">
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
+
                                             </td>
                                         	<td id="pt62"></td>
                                         	<td id="pt63"></td>
                                         	<td id="pt64">
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
-                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
-                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
+
                                             </td>
                                         </tr>
                                     </tbody>
