split the js file to subfiles for each view

--- a/inc/assets/pgs/Encadrants.html
+++ b/inc/assets/pgs/Encadrants.html
@@ -1,4 +1,5 @@
-<script src="./assets/pgs/mn.js"></script>
+<!-- <script src="./assets/pgs/mn.js"></script> -->
+<script src="./assets/js/tchers.js"></script>
 <div class="container-fluid">
                 <!--Début Tableau--->
              <div class="row">
