--- a/inc/assets/pgs/Groupe.html
+++ b/inc/assets/pgs/Groupe.html
@@ -1,4 +1,5 @@
-<script src="./assets/pgs/mn.js"></script>
+<!-- <script src="./assets/pgs/mn.js"></script> -->
+<script src="./assets/js/grps.js"></script>
 <style media="screen">
   #stdntsManagementWindow {
           display: none;
@@ -163,7 +164,7 @@
                       <div class="content table-responsive table-full-width">
                           <hr>
                           <div class="header">
-                              <h4 class="title">Liste des Stagaires déja affectés  pour le  GROUPE-A </h4>
+                              <h4 class="title">Liste des Stagaires déja affectés  pour le Groupe : <span id="grpNamePopUp"></span> </h4>
                           </div>
                           <br>
 
