--- a/inc/index.html
+++ b/inc/index.html
@@ -35,7 +35,7 @@
 		<script src="./assets/pgs/notif.js"></script>
 		<link rel="stylesheet" href="./assets/css/notif.css"/>
 		<!-- <script src="./assets/pgs/mn.js"></script> -->
-		<script src="./assets/pgs/mn.js"></script>
+		<!-- <script src="./assets/pgs/mn.js"></script> -->
 
 
 
