--- a/inc/assets/pgs/EmploiDuTemps.html
+++ b/inc/assets/pgs/EmploiDuTemps.html
@@ -1,4 +1,5 @@
-<script src="./assets/pgs/mn.js"></script>
+<!-- <script src="./assets/pgs/mn.js"></script> -->
+<script src="./assets/js/plng.js"></script>
 
 <div class="container-fluid">
                 <div class="row">
