working on the students page

--- a/inc/assets/pgs/Stagiaires.html
+++ b/inc/assets/pgs/Stagiaires.html
@@ -1,4 +1,4 @@
-<script src="./assets/pgs/mn.js"></script>
+<script src="./assets/js/stdnts.js"></script>
 <div class="container-fluid">
 
              <!--Début Tableau--->
@@ -61,7 +61,7 @@
                                   <label>Action groupée :</label>
                             </div>
                             <div class="col-12 col-md-6 text-center">
-                                <select class="card" id="Actionchoix" name="Actionchoix">
+                                <select class="card" name="Actionchoix" class="stdntCheckBox">
                                     <option></option>
                                     <option>Déclarer une période de stage</option>
                                     <option>Passer à la deuxiéme année</option>
@@ -73,7 +73,8 @@
                         <div class="content table-responsive table-full-width">
                             <table class="table table-striped">
                                 <thead>
-                                    <th><input type="checkbox" id="checkbox"></th>
+                                    <th>
+                                    </th>
                                     <th>Stagiaire</th>
                                     <th>Filière</th>
                                     <th>Groupe</th>
@@ -86,7 +87,9 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><input type="checkbox" id="checkbox"></td>
+                                        <td>
+                                          <input type="checkbox" id="checkbox">
+                                        </td>
                                         <td>BOURIR Karim</td>
                                         <td>Équitation</td>
                                         <td>Groupe A</td>
