--- a/inc/assets/pgs/Stagiaires.html
+++ b/inc/assets/pgs/Stagiaires.html
@@ -32,6 +32,42 @@
         }
 
 
+
+
+        #newStdntWindow {
+
+                display: none;
+                position: fixed;
+                z-index: 1;
+                padding-top: 100px;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%; /* Full height */
+                overflow: auto; /* Enable scroll if needed */
+                background-color: rgb(0,0,0); /* Fallback color */
+                background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+              }
+
+
+              #newStdntWindowContent {
+                overflow:scroll;
+                height:600px;
+                background-color: #fefefe;
+                margin: auto;
+                padding: 20px;
+                border: 1px solid #888;
+                width: 80%;
+              }
+
+
+              #newStdntWindowCloseBtn {
+
+                float: right;
+                align-self: flex-end;
+              }
+
+
 </style>
 
 
@@ -47,7 +83,7 @@
                                 <h4 class="title"></h4>
                             </div>
                             <div class="col-lg-3 col-sm-6">
-                                <a class="btn btn-block btn-info btn-lg font-weight-medium auth-form-btn" href="NouveauStagaire.html">Ajouter Un(e) Stagiaire</a>
+                                <button type="button" id="addNewStdntBtn" class="btn btn-block btn-info btn-lg font-weight-medium auth-form-btn">Ajouter Un(e) Stagiaire</button type="button" id="addNewStdntBtn">
                             </div>
                         </div>
                     </div>
@@ -187,4 +223,250 @@
                 </div>
             </div>
 
+            </div>
+
+
+<!-- ------------------------------------------- new Stdnt window------------------------------------------------- -->
+
+
+            <div class="content" id="newStdntWindow">
+                <div class="container-fluid" id="newStdntWindowContent">
+                  <button type="button" class="btn btn-danger" name="button" id="newStdntWindowCloseBtn">X</button>
+
+                  <hr>
+
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12">
+                            <div class="card">
+                                <div class="header">
+                                    <h4 class="title">Informations Personnelles</h4>
+                                </div>
+                                <hr/>
+                                <div class="content">
+                                    <form>
+                                        <div class="row">
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label>Prénom *</label>
+                                                    <input  name="Prenom" Id="newStdntWindowPrenom" type="text" class="form-control border-input" placeholder="Prénom">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label>Nom *</label>
+                                                    <input name="Nom" Id="newStdntWindowNom" type="text" class="form-control border-input" placeholder="Nom">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label>Filières *</label>
+                                                    <select class="form-control border-input" id="newStdntWindowFilieres" name="Filieres">
+                                                        <option></option>
+                                                        <option>Équitation</option>
+                                                        <option>Nutrition des cheveux</option>
+                                                        <option>Filiere1</option>
+                                                        <option>Filiere2</option>
+                                                      </select>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label>Groupes *</label>
+                                                    <select class="form-control border-input" id="newStdntWindowGrps" name="Groupes">
+                                                        <option></option>
+                                                        <option>Groupe A</option>
+                                                        <option>Groupe B</option>
+                                                        <option>Groupe C</option>
+                                                      </select>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label>Sexe *</label>
+                                                    <select class="form-control border-input" id="newStdntWindowSex" name="Sexe">
+                                                        <option></option>
+                                                        <option>Homme</option>
+                                                        <option>Femme</option>
+                                                      </select>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label>Date de naissance * </label>
+                                                    <input name="Datedenaissance" Id="newStdntWindowBD" type="date" class="form-control border-input" placeholder="">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label>Téléphone * </label>
+                                                    <input name="telephoneStage" Id="newStdntWindowPhone" type="tel" class="form-control border-input" placeholder="Téléphone">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label>Email</label>
+                                                    <input name="EmailStag" Id="newStdntWindowEmail" type="email" class="form-control border-input" placeholder="Email">
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-md-4">
+                                                <div class="form-group">
+                                                    <label>Numero de la carte d'identité / Passeport *</label>
+                                                    <input  name="Prenom" Id="newStdntWindowCNE" type="text" class="form-control border-input" placeholder="Prénom">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="form-group">
+                                                    <label>Numéro Massar</label>
+                                                    <input name="Nom" Id="newStdntWindowMassar" type="text" class="form-control border-input" placeholder="Nom">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-4">
+                                                <div class="form-group">
+                                                    <label>Nationalité  *</label>
+                                                    <input name="Nationalite" Id="newStdntWindowNationalite" type="text" class="form-control border-input" placeholder="Nationalité">
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <div class="form-group">
+                                                    <label>Adresse *</label>
+                                                    <input name="Adresse" Id="newStdntWindowAdress" type="text" class="form-control border-input" placeholder="Adresse">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-2">
+                                                <div class="form-group">
+                                                    <label>Ville *</label>
+                                                    <input name="Ville" Id="newStdntWindowCity" type="text" class="form-control border-input" placeholder="Ville">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-2">
+                                                <div class="form-group">
+                                                    <label>Code Postal *</label>
+                                                    <input name="CodePostal" Id="newStdntWindowZip" type="number" class="form-control border-input" placeholder="Code Postal">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-2">
+                                                <div class="form-group">
+                                                    <label>Payé *</label>
+                                                    <input name="Paye" Id="newStdntWindowPaid" type="text" class="form-control border-input" placeholder="Paye">
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="header">
+                                            <h4 class="title">Filiation</h4>
+                                        </div>
+                                        <hr/>
+
+                                        <div class="row">
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label>Prénom Pére </label>
+                                                    <input name="PrenomPere" Id="newStdntWindowFatherFname" type="text" class="form-control border-input" placeholder="Prénom Pére">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label>Nom du Père </label>
+                                                    <input name="nomPere" Id="newStdntWindowFatherLname" type="text" class="form-control border-input" placeholder="Nom du Père">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label>Téléphone du Pére</label>
+                                                    <input name="TelPere" Id="newStdntWindowFatherPhone" type="text" class="form-control border-input" placeholder="Téléphone du Pére">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label>Mail du Pére</label>
+                                                    <input name="MailPere" Id="newStdntWindowFatherMail" type="text" class="form-control border-input" placeholder="Mail du Pére">
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label>Prénom Mére </label>
+                                                    <input name="PrenomMere" Id="newStdntWindowMotherFname" type="text" class="form-control border-input" placeholder="Prénom Mére">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label>Nom de la Mére </label>
+                                                    <input name="nomMere" Id="newStdntWindowMotherLname" type="text" class="form-control border-input" placeholder="Nom de la Mére">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label>Téléphone de la Mére</label>
+                                                    <input name="TelMere" Id="newStdntWindowMotherPhone" type="text" class="form-control border-input" placeholder="Téléphone de la Mére">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-3">
+                                                <div class="form-group">
+                                                    <label>Mail de la Mére</label>
+                                                    <input name="MailMere" Id="newStdntWindowMotherMail" type="text" class="form-control border-input" placeholder="Mail de la Mére">
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="header">
+                                            <h4 class="title">La personne à contacter en cas d'urgence</h4>
+                                        </div>
+                                        <hr/>
+
+                                        <div class="row">
+                                            <div class="col-md-4">
+                                                <div class="form-group">
+                                                    <label>Nom Complet</label>
+                                                    <input name="NomCompletUrgence" Id="newStdntWindowNomCompletUrgence" type="text" class="form-control border-input" placeholder="Nom Complet">
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-4">
+                                                <div class="form-group">
+                                                    <label>Téléphone</label>
+                                                    <input name="TelUrgence" Id="newStdntWindowTelUrgence" type="text" class="form-control border-input" placeholder="Téléphone">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="form-group">
+                                                    <label>Email</label>
+                                                    <input name="EMailUrgence" Id="newStdntWindowEMailUrgence" type="text" class="form-control border-input" placeholder="Email">
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="text-center">
+                                            <button type="submit" class="btn btn-info btn-fill btn-wd">Ajouter</button>
+                                        </div>
+                                        <div class="clearfix"></div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
             </div>
