--- a/inc/assets/pgs/Stagiaires.html
+++ b/inc/assets/pgs/Stagiaires.html
@@ -1,7 +1,7 @@
 <script src="./assets/js/stdnts.js"></script>
 
 <style media="screen">
-  #stageDeclrWindow {
+      #stageDeclrWindow {
           display: none;
           position: fixed;
           z-index: 1;
@@ -239,7 +239,7 @@
                         <div class="col-lg-12 col-md-12">
                             <div class="card">
                                 <div class="header">
-                                    <h4 class="title">Informations Personnelles</h4>
+                                    <h4 class="title">Informations Personnelles</h4><span id="modifyStdntID" hidden></span>
                                 </div>
                                 <hr/>
                                 <div class="content">
@@ -249,35 +249,34 @@
                                                 <div class="form-group">
                                                     <label>Prénom *</label>
                                                     <input  name="Prenom" Id="newStdntWindowPrenom" type="text" class="form-control border-input" placeholder="Prénom">
+                                                    <span id="newStdntWindowPrenomErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
                                             <div class="col-md-3">
                                                 <div class="form-group">
                                                     <label>Nom *</label>
                                                     <input name="Nom" Id="newStdntWindowNom" type="text" class="form-control border-input" placeholder="Nom">
+                                                    <span id="newStdntWindowNomErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
                                             <div class="col-md-3">
                                                 <div class="form-group">
                                                     <label>Filières *</label>
                                                     <select class="form-control border-input" id="newStdntWindowFilieres" name="Filieres">
-                                                        <option></option>
-                                                        <option>Équitation</option>
-                                                        <option>Nutrition des cheveux</option>
-                                                        <option>Filiere1</option>
-                                                        <option>Filiere2</option>
+                                                        <option value="null">None</option>
+
                                                       </select>
+                                                      <span id="newStdntWindowFilieresErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
                                             <div class="col-md-3">
                                                 <div class="form-group">
                                                     <label>Groupes *</label>
                                                     <select class="form-control border-input" id="newStdntWindowGrps" name="Groupes">
-                                                        <option></option>
-                                                        <option>Groupe A</option>
-                                                        <option>Groupe B</option>
-                                                        <option>Groupe C</option>
+                                                        <option value="null">None</option>
+
                                                       </select>
+                                                      <span id="newStdntWindowGrpsErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
                                         </div>
@@ -287,16 +286,17 @@
                                                 <div class="form-group">
                                                     <label>Sexe *</label>
                                                     <select class="form-control border-input" id="newStdntWindowSex" name="Sexe">
-                                                        <option></option>
-                                                        <option>Homme</option>
-                                                        <option>Femme</option>
+                                                        <option value="Homme">Homme</option>
+                                                        <option value="Femme">Femme</option>
                                                       </select>
+                                                      <span id="newStdntWindowSexErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
                                             <div class="col-md-3">
                                                 <div class="form-group">
                                                     <label>Date de naissance * </label>
                                                     <input name="Datedenaissance" Id="newStdntWindowBD" type="date" class="form-control border-input" placeholder="">
+                                                    <span id="newStdntWindowBDErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
 
@@ -304,6 +304,7 @@
                                                 <div class="form-group">
                                                     <label>Téléphone * </label>
                                                     <input name="telephoneStage" Id="newStdntWindowPhone" type="tel" class="form-control border-input" placeholder="Téléphone">
+                                                    <span id="newStdntWindowPhoneErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
 
@@ -311,6 +312,7 @@
                                                 <div class="form-group">
                                                     <label>Email</label>
                                                     <input name="EmailStag" Id="newStdntWindowEmail" type="email" class="form-control border-input" placeholder="Email">
+                                                    <span id="newStdntWindowEmailErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
                                         </div>
@@ -320,19 +322,22 @@
                                                 <div class="form-group">
                                                     <label>Numero de la carte d'identité / Passeport *</label>
                                                     <input  name="Prenom" Id="newStdntWindowCNE" type="text" class="form-control border-input" placeholder="Prénom">
+                                                    <span id="newStdntWindowCNEErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
                                             <div class="col-md-4">
                                                 <div class="form-group">
                                                     <label>Numéro Massar</label>
                                                     <input name="Nom" Id="newStdntWindowMassar" type="text" class="form-control border-input" placeholder="Nom">
+                                                    <span id="newStdntWindowMassarErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
 
                                             <div class="col-md-4">
                                                 <div class="form-group">
                                                     <label>Nationalité  *</label>
-                                                    <input name="Nationalite" Id="newStdntWindowNationalite" type="text" class="form-control border-input" placeholder="Nationalité">
+                                                    <input name="Nationalite" Id="newStdntWindowNationalite" type="text" class="form-control border-input" value="Marocain" placeholder="Nationalité">
+                                                    <span id="newStdntWindowNationaliteErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
                                         </div>
@@ -342,6 +347,7 @@
                                                 <div class="form-group">
                                                     <label>Adresse *</label>
                                                     <input name="Adresse" Id="newStdntWindowAdress" type="text" class="form-control border-input" placeholder="Adresse">
+                                                    <span id="newStdntWindowAdressErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
 
@@ -349,6 +355,7 @@
                                                 <div class="form-group">
                                                     <label>Ville *</label>
                                                     <input name="Ville" Id="newStdntWindowCity" type="text" class="form-control border-input" placeholder="Ville">
+                                                    <span id="newStdntWindowCityErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
 
@@ -356,13 +363,15 @@
                                                 <div class="form-group">
                                                     <label>Code Postal *</label>
                                                     <input name="CodePostal" Id="newStdntWindowZip" type="number" class="form-control border-input" placeholder="Code Postal">
+                                                    <span id="newStdntWindowZipErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
 
                                             <div class="col-md-2">
                                                 <div class="form-group">
                                                     <label>Payé *</label>
-                                                    <input name="Paye" Id="newStdntWindowPaid" type="text" class="form-control border-input" placeholder="Paye">
+                                                    <input name="Paye" Id="newStdntWindowPaid" type="number" class="form-control border-input" placeholder="Paye">
+                                                    <span id="newStdntWindowPaidErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
                                         </div>
@@ -377,6 +386,7 @@
                                                 <div class="form-group">
                                                     <label>Prénom Pére </label>
                                                     <input name="PrenomPere" Id="newStdntWindowFatherFname" type="text" class="form-control border-input" placeholder="Prénom Pére">
+                                                    <span id="newStdntWindowFatherFnameErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
 
@@ -384,6 +394,7 @@
                                                 <div class="form-group">
                                                     <label>Nom du Père </label>
                                                     <input name="nomPere" Id="newStdntWindowFatherLname" type="text" class="form-control border-input" placeholder="Nom du Père">
+                                                    <span id="newStdntWindowFatherLnameErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
 
@@ -391,12 +402,14 @@
                                                 <div class="form-group">
                                                     <label>Téléphone du Pére</label>
                                                     <input name="TelPere" Id="newStdntWindowFatherPhone" type="text" class="form-control border-input" placeholder="Téléphone du Pére">
+                                                    <span id="newStdntWindowFatherPhoneErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
                                             <div class="col-md-3">
                                                 <div class="form-group">
                                                     <label>Mail du Pére</label>
                                                     <input name="MailPere" Id="newStdntWindowFatherMail" type="text" class="form-control border-input" placeholder="Mail du Pére">
+                                                    <span id="newStdntWindowFatherMailErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
                                         </div>
@@ -406,6 +419,7 @@
                                                 <div class="form-group">
                                                     <label>Prénom Mére </label>
                                                     <input name="PrenomMere" Id="newStdntWindowMotherFname" type="text" class="form-control border-input" placeholder="Prénom Mére">
+                                                    <span id="newStdntWindowMotherFnameErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
 
@@ -413,6 +427,7 @@
                                                 <div class="form-group">
                                                     <label>Nom de la Mére </label>
                                                     <input name="nomMere" Id="newStdntWindowMotherLname" type="text" class="form-control border-input" placeholder="Nom de la Mére">
+                                                    <span id="newStdntWindowMotherLnameErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
 
@@ -420,12 +435,14 @@
                                                 <div class="form-group">
                                                     <label>Téléphone de la Mére</label>
                                                     <input name="TelMere" Id="newStdntWindowMotherPhone" type="text" class="form-control border-input" placeholder="Téléphone de la Mére">
+                                                    <span id="newStdntWindowMotherPhoneErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
                                             <div class="col-md-3">
                                                 <div class="form-group">
                                                     <label>Mail de la Mére</label>
                                                     <input name="MailMere" Id="newStdntWindowMotherMail" type="text" class="form-control border-input" placeholder="Mail de la Mére">
+                                                    <span id="newStdntWindowMotherMailErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
                                         </div>
@@ -440,6 +457,7 @@
                                                 <div class="form-group">
                                                     <label>Nom Complet</label>
                                                     <input name="NomCompletUrgence" Id="newStdntWindowNomCompletUrgence" type="text" class="form-control border-input" placeholder="Nom Complet">
+                                                    <span id="newStdntWindowNomCompletUrgenceErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
 
@@ -447,18 +465,20 @@
                                                 <div class="form-group">
                                                     <label>Téléphone</label>
                                                     <input name="TelUrgence" Id="newStdntWindowTelUrgence" type="text" class="form-control border-input" placeholder="Téléphone">
+                                                    <span id="newStdntWindowTelUrgenceErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
                                             <div class="col-md-4">
                                                 <div class="form-group">
                                                     <label>Email</label>
                                                     <input name="EMailUrgence" Id="newStdntWindowEMailUrgence" type="text" class="form-control border-input" placeholder="Email">
+                                                    <span id="newStdntWindowEMailUrgenceErr" style="font-size:12px; color:red; font-style: italic;"></span>
                                                 </div>
                                             </div>
                                         </div>
 
                                         <div class="text-center">
-                                            <button type="submit" class="btn btn-info btn-fill btn-wd">Ajouter</button>
+                                            <button type="button" class="btn btn-info btn-fill btn-wd" id="saveNewStdntBtn">Ajouter</button>
                                         </div>
                                         <div class="clearfix"></div>
                                     </form>
